Ajout de nouveau style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Main CSS Files -->
     <link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="namari-color.css">
+	<link rel="stylesheet" href="font-awesome.css">
 
 </head>
 <body>
